FEM/NewsletterSignUp/styles.css
@font-face {
    font-family: 'Roboto Regular';
    src: url(./assets/fonts/Roboto-Regular.ttf);
    font-size: 12pt;
}

@font-face {
    src: url(./assets/fonts/Roboto-Bold.ttf);
    font-family: 'Roboto Bold';
    font-size: 12pt;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    background-color: hsl(235, 18%, 26%);
}

body {
    font-family: 'Roboto Regular', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    height: 100vh;
    width: 100vw;
}

main {
    margin-top: 0;
    line-height: 1.5rem;
    background-color: white;
    width: 100vw;
    height: 100vh;
    font-weight: 500;
    border-radius: 1rem;
    box-shadow: .1rem .1rem 1rem rgb(0, 0, 0);
    transition: box-shadow .5s;
}

main:hover {
    box-shadow: 13px 13px 20px hsla(0, 0%, 0%, 0.849);
    transition: box-shadow .3s;
}

.hide {
    display: none;
}

.invalidMail {
    color: rgb(219, 111, 109);
    border: 1px solid rgb(219, 111, 109);
    background-color: hsla(4, 100%, 67%, 0.163);
}

#submittedMain {
    padding: 8rem 0 0 0;
}

#banner {
    width: 100vw;
    margin-bottom: 1.5rem;
}

#icon-success {
    margin: 1.7rem 0 1rem 1.4rem;
}

#email-error {
    float: right;
    display: none;
    color: rgb(219, 111, 109);
}

section,
h1 {
    margin: 0 1rem 0 1.4rem;
}

h1 {
    font-family: 'Roboto Bold', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 2.5rem;
    line-height: 2.5rem;
}

section {
    display: flex;
    justify-content: start;
}

p {
    margin: 1.6rem 0 1.5rem 0;
}

ul {
    list-style: none;
    padding: 0;
}

li {
    position: relative;
    padding-left: 2.4rem;
    margin-bottom: .6rem;
}

li::before {
    content: url(./assets/img/icon-list.svg);
    position: absolute;
    left: 0;
    top: 0%;
}

form {
    z-index: 100;
    position: absolute;
    bottom: 0;
    width: 90%;
    font-weight: 600;
    font-size: .8rem;
    margin: 0 0 2rem 0;
}

input {
    font-size: 1rem;
    font-weight: 600;
    border-radius: .5rem;
    border: 1px solid rgba(0, 0, 0, 0.233);
    padding: 1.2rem;
    margin: .3rem 0 1rem 0;
    width: 100%;
    cursor: pointer;
}

input::placeholder {
    font-weight: 600;
    color: rgba(0, 0, 0, 0.267);
}

input:hover {
    border: 1px solid rgba(0, 0, 0, 0.521);
    box-shadow: 1px 6px 20px hsla(5, 51%, 14%, 0.2);
    
}

button {
    border: none;
    font-size: .9rem;
    font-weight: 600;
    background-color: hsl(234, 29%, 20%);
    color: white;
    width: 100%;
    border-radius: .5rem;
    padding: 1.3rem;
    margin: .5rem 0 .4rem 0;
    transition: box-shadow .2s ease-in;
}

button:hover {
    background-image: linear-gradient(45deg, rgb(255, 83, 123), hsl(4, 100%, 67%));
    box-shadow: 1px 6px 20px hsla(4, 100%, 67%, 0.514);
    cursor: pointer;
    transition: box-shadow .4s ease;
}

@media (min-width: 1160px) {
    main {
        width: 80%;
        max-width: 925px;
        max-height: 640px;
    }

    #banner {
        display: inline;
        float: right;
        max-width: 43%;
        content: url(./assets/img/illustration-sign-up-desktop.svg);
    }

    h1 {
        font-size: 3.5rem;
        margin: 6.5rem 2rem .5rem 4rem;
    }

    #banner {
        margin: 1.5rem;
    }

    section {
        font-size: 1rem;
        display: inline;
        float: left;
        width: 40%;
        margin: 0 .2rem 2rem 4rem;
    }

    form {
        display: inline;
        position: relative;
        float: left;
        width: 100%;
        margin-top: 1.5rem;
    }

    main#submittedMain {
        width: 30.2rem;
        height: 30.2rem;
        padding: 1rem 1rem 2rem 4rem;
        border-radius: 2rem;
        h1,
        section {
            padding: 0;
            margin: 0;
            width: 90%;
        }
        h1 {
            font-size: 3.4rem;
            line-height: 3.5rem;
        }
        p {
            font-size: 1rem;
            margin: 1.2rem 0 1.5rem 0;
        }
        form {
            margin: 0;
            button {
                padding: 1.2rem;
            }
        }
        #icon-success {
            margin: 1.5rem 0 1.8rem 0;
        }
    }
}

@media (min-width: 550px) and (max-width: 1160px) {
    main {
        width: 24rem;
        padding-right: 2rem;
        #banner {
            width: 24rem;
        }
    }

    main#submittedMain {
        width: 24rem;
        h1 {
            margin: 1rem 0 0 1.5rem;
            width: 80%;
        }
        #dismiss {
            width: 21rem;
        }
    }

    form {
        width: 21rem;
    }
}

